<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Contenedor para el texto "Agregar" y la flecha de volver -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- Flecha de volver -->
            <ImageButton
                android:id="@+id/flecha_volver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/flecha_volver"
                android:contentDescription="Botón de volver atrás" />

            <!-- Agregar -->
            <TextView
                android:id="@+id/titulo_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/titulo_agregar"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Palomita -->
        <ImageButton
            android:id="@+id/boton_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/boton_check"
            android:contentDescription="Botón de confirmación"
            android:tooltipText="Presione para confirmar la acción" />

    </LinearLayout>

    <!-- Nombre -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/nombre_edit_text"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:hint="Ingrese su nombre"
            android:inputType="textPersonName" />

    </LinearLayout>

    <!-- Apellido -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/apellido_edit_text"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:hint="Ingrese su apellido"
            android:inputType="textPersonName"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <!-- Número de teléfono -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/telefono_edit_text"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:hint="+54 _ _  _ _ _  _ _  _ _"
            android:inputType="phone"
            android:digits="0123456789"
            android:maxLength="10"
            />

    </LinearLayout>

    <!-- Domicilio -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domicilio"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/domicilio_edit_text"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:hint="Ingrese su domicilio"
            android:inputType="textPostalAddress" />

    </LinearLayout>

    <!-- Género -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/genero_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/genero_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/genero_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/masculino" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>